PERF. DESKTOPS. Fixed vertical aligned to Services menu link

--- a/css/main.css
+++ b/css/main.css
@@ -4859,7 +4859,7 @@ p {
     padding-top: unset;
   }
   .nav > li:nth-of-type(2) {
-    padding-top: unset;
+    padding: 0;
   }
 }
 .nav > li > a {
