--- a/less/blocks/_header.less
+++ b/less/blocks/_header.less
@@ -116,7 +116,7 @@
         }
 
         &:nth-of-type(2) {
-            padding-top: unset;
+            padding: 0;
         }
 
     }  
